# Pyrros

./: .gitignore  Backlog.md  LICENSE  README.md  pyproject.toml
modules/algorithms/grpo/: grpo_sampler.py
modules/models/grpo/: grpo_model.py
pyrros/algorithms/: grpo_sampler.py  policy_snapshot.py
pyrros/algorithms/grpo/: grpo_sampler.py  load_ref_model.py
pyrros/cli/: .env  cli.py  cli_v1.py  cli_v2.py  generate_manifest.py  manifest.json  pyproject.toml
pyrros/models/: grpo_model.py
pyrros/models/grpo/: grpo_model.py
pyrros/modules/: dataset.py  generation.py  model.py  optimization.py  rewards.py
pyrros/trainers/: base.py  grpo.py  grpo_composer.py
pyrros/trainers/grpo_trainer/: grpo.md  grpo_generation.py  grpo_loss.py
pyrros/utils/: dataset_utils.py  ddp.py  logger.py  memory.py  model_utils.py  reward_utils.py
recipes/: train_grpo_qwen.py
recipes/grpo/: rewards.py  train_grpo.py  train_grpo_qwen.py
registry/algorithms/grpo/: grpo_sampler.py  load_ref_model.py  policy_snapshot.py
registry/models/grpo/: grpo_model.py
registry/utils/grpo/: dataset_utils.py
tests/: test_generation_and_grpo.py  test_grpo_trainer.py  test_model.py
tests/beam_tests/grpo/: fine_tune.py  rewards.py  upload.py
tests/smoke/: test_dataset.py  test_grpo_trainer.py  test_model.py
tests/smoke_tests/: test_dataset.py  test_grpo_trainer.py  test_model.py
tests/unit/registry/: test_grpo_model.py  test_grpo_sampler.py
tests/unit/utils/: test_dataset_utils.py  test_model_utils.py
