[project]
name = "pyrros"
version = "0.1.0"
description = "Modular and efficient training scripts for LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "composer>=0.31.0",
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "peft>=0.16.0",
    "pytest>=8.4.1",
    "questionary>=2.1.0",
    "rich>=13.9.4",
    "tensorboard>=2.19.0",
    "torch==2.7.0",
    "transformers",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# -> on inclut uniquement le package 'pyrros' et ses sous-packages
include = ["pyrros*"]
# -> on exclut 'recipes' qui contient des scripts, pas du code importable
exclude = ["recipes*", "modules*", "tests*"]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers" }

[project.optional-dependencies]
dev = ["pytest", "peft", "bitsandbytes"]

[project.scripts]
pyrros = "pyrros.cli.cli:main"
